# Lab4_3sem

./: Armament.cpp  Armament.h  Basic_config.cpp  CMakeLists.txt  Diagram.html  Diagram5.drawio  Mission.cpp  Mission.h  Ship.cpp  Ship.h  Table.cpp  Table.h  main.cpp
Basic/: Armament.cpp  Armament.h
Google_tests/: CMakeLists.txt  T_Armament.cpp  T_Ships.cpp
Mission/: Basic_config.cpp  Game.cpp  Mission.cpp  Mission.h
Ships/: Ship.cpp  Ship.h
Table/: Table.h
html/: _armament_8h_source.html  _mission_8h_source.html  _ship_8h_source.html  _table_8h_source.html  annotated.html  class_basic_1_1_armament-members.html  class_basic_1_1_armament.html  class_menu_1_1_basic__config-members.html  class_menu_1_1_basic__config.html  class_menu_1_1_mission-members.html  class_menu_1_1_mission.html  class_pattern_1_1_info-members.html  class_pattern_1_1_info.html  class_pattern_1_1_iterator-members.html  class_pattern_1_1_iterator.html  class_pattern_1_1_table-members.html  class_pattern_1_1_table.html  class_ships_1_1_military__transport__ship-members.html  class_ships_1_1_military__transport__ship.html  class_ships_1_1_security__ship-members.html  class_ships_1_1_security__ship.html  class_ships_1_1_ship-members.html  class_ships_1_1_ship.html  class_ships_1_1_transport__ship-members.html  class_ships_1_1_transport__ship.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  menudata.js  struct_basic_1_1_capitan-members.html  struct_basic_1_1_capitan.html  struct_basic_1_1_coordinate-members.html  struct_basic_1_1_coordinate.html  struct_pattern_1_1_table__element-members.html  (+1 more)
(+49 files in other folders)
